Differentiate random seed between task treatments

--- a/pipeline/stage=00+what=evolve_host_prototypes/evolve_host_prototypes.slurm.sh.jinja
+++ b/pipeline/stage=00+what=evolve_host_prototypes/evolve_host_prototypes.slurm.sh.jinja
@@ -162,7 +162,8 @@ EOF
 {{ tasks_configuration }}
 EOF
 
-  RANDOM_SEED="\${EPOCH_COUNTER}"
+  RANDOM_SEED="\$(cksum <<< "{{ tasks_slug }} \${EPOCH_COUNTER}" | cut -f 1 -d ' ')"
+  echo "RANDOM_SEED \${RANDOM_SEED}"
 
   {{ config_and_run }}
 
