--- a/pipeline/stage=00+what=evolve_host_prototypes/evolve_host_prototypes.slurm.sh.jinja
+++ b/pipeline/stage=00+what=evolve_host_prototypes/evolve_host_prototypes.slurm.sh.jinja
@@ -162,10 +162,10 @@ EOF
 {{ tasks_configuration }}
 EOF
 
-  RANDOM_SEED="\$(cksum <<< "{{ tasks_slug }} \${EPOCH_COUNTER}" | cut -f 1 -d ' ')"
+  export RANDOM_SEED="\$(cksum <<< "{{ tasks_slug }} \${EPOCH_COUNTER}" | cut -f 1 -d ' ')"
   echo "RANDOM_SEED \${RANDOM_SEED}"
 
-  {{ config_and_run }}
+  {{ config_and_run | replace("$", "\$") }}
 
   LOAD_POPULATION_PATH="\$(echo "\${PWD}/data/"*.spop | xargs readlink -f)"
   LOAD_POPULATION_PROVLOG_PATH="\$(echo "\${PWD}/provlog.yaml" | xargs readlink -f)"
