Log prototype host tasks configuration

--- a/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
@@ -132,6 +132,7 @@ while :; do
   echo "PWD \${PWD}"
 
   echo "{{ replicate }}" > "replicate"
+  echo "{{ tasks_slug }}" > "tasks"
 
   echo "LOAD_POPULATION_PATH \${LOAD_POPULATION_PATH}"
   echo "LOAD_POPULATION_PROVLOG_PATH \${LOAD_POPULATION_PROVLOG_PATH}"
