--- a/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
@@ -132,6 +132,14 @@ while :; do
   cd "\${BATCH_PATH}"
   echo "PWD \${PWD}"
 
+  # setup job info
+  mkdir job
+  echo "${SLURM_JOB_ID:-none}" > "job/id.txt"
+  cp "${JOBSCRIPT_PATH}" "job/rerun.slurm.sh"
+  chmod +x "job/rerun.slurm.sh"
+  ln -s "${JOBCONT_PATH}" "job/continue.slurm.sh"
+  chmod +x "job/continue.slurm.sh"
+
   echo "{{ replicate }}" > "replicate"
   echo "{{ tasks_slug }}" > "tasks"
 
@@ -236,6 +244,8 @@ tasks_slug: {{ tasks_slug }}
 J2_HEREDOC_EOF_{{ "instantiated" }}
 }| j2 --format=yaml -o "${SBATCH_SCRIPT_PATH}" "${CONTINUATION_TEMPLATE_PATH}"
 chmod +x "${SBATCH_SCRIPT_PATH}"
+
+cp "${SBATCH_SCRIPT_PATH}" "${JOBCONT_PATH}"
 
 for try in {0..9}; do
   sbatch "${SBATCH_SCRIPT_PATH}" && break
