Name jobscripts by stage instead of date
slurm job id will already effectively chronologicalize them, and
there's always ls -a

--- a/pipeline/stage=00+what=evolve_host_prototypes/evolve_host_prototypes.slurm.sh.jinja
+++ b/pipeline/stage=00+what=evolve_host_prototypes/evolve_host_prototypes.slurm.sh.jinja
@@ -13,6 +13,9 @@
 # Job may be requeued after node failure.
 #SBATCH --requeue
 
+export STAGE="00"
+echo "STAGE ${STAGE}"
+
 {{ setup_instrumentation }}
 
 BATCH="{{ batch }}"
