--- a/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
@@ -13,8 +13,10 @@
 # Job may be requeued after node failure.
 #SBATCH --requeue
 
-{{ setup_instrumentation }}
+export STAGE="04"
+echo "STAGE ${STAGE}"
 
+{{ setup_instrumentation }}
 
 RUNMODE="{{ runmode }}"
 echo "RUNMODE ${RUNMODE}"
