--- a/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
@@ -3,7 +3,7 @@
 #SBATCH --time={%if 'production' == runmode%}4:00:00{%else%}1:00:00{%endif%}
 #SBATCH --job-name evolve_host_prototypes
 #SBATCH --account=devolab
-#SBATCH --output="/mnt/home/%u/slurm_job_log/a=evolve_host_prototypes+slurm_job_id=%j+ext.txt"
+#SBATCH --output="/mnt/home/%u/joblog/id=%j+stage=04+ext.txt"
 #SBATCH --mem=4G
 #SBATCH --ntasks=1
 #SBATCH --cpus-per-task=1
@@ -136,6 +136,7 @@ while :; do
 
   # setup job info
   mkdir job
+  ln -s "joblog/id=${SLURM_JOB_ID-none}+stage=04+ext.txt" "job/log.txt"
   echo "${SLURM_JOB_ID:-none}" > "job/id.txt"
   cp "${JOBSCRIPT_PATH}" "job/rerun.slurm.sh"
   chmod +x "job/rerun.slurm.sh"
