Setup control treatments

--- a/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=04+what=evolve_parasite_with_homogeneous_reseeded_hosts/evolve_parasite_with_homogeneous_reseeded_hosts.slurm.sh.jinja
@@ -73,6 +73,10 @@ echo "LOAD_POPULATION_PATH ${LOAD_POPULATION_PATH}"
 export LOAD_POPULATION_PROVLOG_PATH
 echo "LOAD_POPULATION_PROVLOG_PATH ${LOAD_POPULATION_PROVLOG_PATH}"
 
+{{ inject_parasite_action_prepend }}
+export INJECT_PARASITE_ACTION_PREPEND
+echo "INJECT_PARASITE_ACTION_PREPEND ${INJECT_PARASITE_ACTION_PREPEND}"
+
 TIMEOUT_SECONDS="$(({% if 'production' == runmode %} 4 * {% endif %} 60 * 60 - SECONDS - 300))"
 echo "TIMEOUT_SECONDS ${TIMEOUT_SECONDS}"
 
