--- a/pipeline/stage=07+what=evolve_parasite_with_polypopulation_reseeded_hosts/evolve_parasite_with_polypopulation_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=07+what=evolve_parasite_with_polypopulation_reseeded_hosts/evolve_parasite_with_polypopulation_reseeded_hosts.slurm.sh.jinja
@@ -3,7 +3,7 @@
 #SBATCH --time={%if 'production' == runmode%}4:00:00{%else%}1:00:00{%endif%}
 #SBATCH --job-name evolve_host_prototypes
 #SBATCH --account=devolab
-#SBATCH --output="/mnt/home/%u/joblog/id=%j+stage=07+ext.txt"
+#SBATCH --output="/mnt/home/%u/joblog/id=%j+stage={{ stage }}+ext.txt"
 #SBATCH --mem=4G
 #SBATCH --ntasks=1
 #SBATCH --cpus-per-task=1
@@ -13,7 +13,7 @@
 # Job may be requeued after node failure.
 #SBATCH --requeue
 
-export STAGE="07"
+export STAGE="{{ stage }}"
 echo "STAGE ${STAGE}"
 
 {{ setup_instrumentation }}
@@ -39,7 +39,7 @@ echo "tasks_slug {{ tasks_slug }}"
 
 {{ install_avida }}
 
-STAGE_PATH="${HOME}/scratch/multicell-parasite/data/runmode={{ runmode }}/stage=${STAGE}+what=evolve_parasite_with_polypopulation_reseeded_hosts/alph=$(python3 -m alphinity {{ replicate }})+replicate={{ replicate }}+tasks={{ tasks_slug }}/"
+STAGE_PATH="${HOME}/scratch/multicell-parasite/data/runmode={{ runmode }}/stage=${STAGE}+what={{ what }}/alph=$(python3 -m alphinity {{ replicate }})+replicate={{ replicate }}+tasks={{ tasks_slug }}/"
 echo "STAGE_PATH ${STAGE_PATH}"
 
 export ATTEMPT_PATH="${STAGE_PATH}/attempts/alph=$(python3 -m alphinity {{ attempt }})+attempt={{ attempt }}/"
@@ -149,6 +149,7 @@ while :; do
 
   echo "LOAD_POPULATION_PATH \${LOAD_POPULATION_PATH}"
   echo "LOAD_POPULATION_PROVLOG_PATH \${LOAD_POPULATION_PROVLOG_PATH}"
+  echo "INJECT_PARASITE_ACTION_PREPEND \${INJECT_PARASITE_ACTION_PREPEND}"
 
   # create provlog
   cp "\${LOAD_POPULATION_PROVLOG_PATH}" "provlog.yaml"
@@ -158,7 +159,7 @@ while :; do
   a: provlog.yaml
   attempt: {{ attempt }}
   batch: ${BATCH}
-  stage: 7
+  stage: ${STAGE}
   date: \$(date --iso-8601=seconds)
   epoch: \${EPOCH_COUNTER}
   initial_epoch: {{ epoch }}
@@ -226,6 +227,9 @@ echo "epoch: ${EPOCH_COUNTER}"
 echo load_population_path: LOAD_POPULATION_PATH="${LOAD_POPULATION_PATH}"
 echo load_population_provlog_path: LOAD_POPULATION_PROVLOG_PATH="${LOAD_POPULATION_PROVLOG_PATH}"
 cat << 'J2_HEREDOC_EOF_{{ "instantiated" }}'
+inject_parasite_action_prepend: '{{ inject_parasite_action_prepend }}'
+stage: '{{ stage }}'
+what: {{ what }}
 attempt: {{ attempt }}
 config_and_run: |
 {{ config_and_run | indent(2, first=True) }}
