Bugfix: actually inject inject_parasite_action_prepend snippet

--- a/pipeline/stage=07+what=evolve_parasite_with_polypopulation_reseeded_hosts/evolve_parasite_with_polypopulation_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=07+what=evolve_parasite_with_polypopulation_reseeded_hosts/evolve_parasite_with_polypopulation_reseeded_hosts.slurm.sh.jinja
@@ -149,6 +149,9 @@ while :; do
 
   echo "LOAD_POPULATION_PATH \${LOAD_POPULATION_PATH}"
   echo "LOAD_POPULATION_PROVLOG_PATH \${LOAD_POPULATION_PROVLOG_PATH}"
+
+  {{ inject_parasite_action_prepend }}
+  export INJECT_PARASITE_ACTION_PREPEND
   echo "INJECT_PARASITE_ACTION_PREPEND \${INJECT_PARASITE_ACTION_PREPEND}"
 
   cp "\${LOAD_POPULATION_PATH}" host-parasite-smt.spop
