Bugfix: differentiate rng seeds per replicate

--- a/pipeline/stage=07+what=evolve_parasite_with_polypopulation_reseeded_hosts/evolve_parasite_with_polypopulation_reseeded_hosts.slurm.sh.jinja
+++ b/pipeline/stage=07+what=evolve_parasite_with_polypopulation_reseeded_hosts/evolve_parasite_with_polypopulation_reseeded_hosts.slurm.sh.jinja
@@ -160,7 +160,7 @@ while :; do
 {{ tasks_configuration }}
 EOF
 
-  export RANDOM_SEED="\$(cksum <<< "{{ replicate }} \${EPOCH_COUNTER}" | cut -f 1 -d ' ')"
+  export RANDOM_SEED="\$(cksum <<< "{{ replicate }} \${EPOCH_COUNTER}  {{ replicate }}" | cut -f 1 -d ' ')"
   echo "RANDOM_SEED \${RANDOM_SEED}"
 
   {{ config_and_run | replace("$", "\$") }}
