--- a/pipeline/stage=200+what=run_paraevo_treatrepl/run_paraevo_treatrepl.slurm.sh.jinja
+++ b/pipeline/stage=200+what=run_paraevo_treatrepl/run_paraevo_treatrepl.slurm.sh.jinja
@@ -3,7 +3,7 @@
 #SBATCH --time={%if 'production' == runmode%}4:00:00{%else%}1:00:00{%endif%}
 #SBATCH --job-name paraevo+{{ treatment }}+{{ replicate }}
 #SBATCH --account=devolab
-#SBATCH --output="/mnt/home/%u/slurm_job_log/a=run_paraevo_treatrepl+slurm_job_id=%j+ext.txt"
+#SBATCH --output="/mnt/home/%u/joblog/id=%j+stage={{ stage }}+ext.txt"
 #SBATCH --mem=4G
 #SBATCH --ntasks=1
 #SBATCH --cpus-per-task=1
