--- a/pipeline/stage=200+what=evolve_parasite_prototype/evolve_parasite_prototype.slurm.sh.jinja
+++ b/pipeline/stage=200+what=evolve_parasite_prototype/evolve_parasite_prototype.slurm.sh.jinja
@@ -1,7 +1,7 @@
 #!/bin/bash -login
 ########## Define Resources Needed with SBATCH Lines ##########
 #SBATCH --time={%if 'production' == runmode%}4:00:00{%else%}1:00:00{%endif%}
-#SBATCH --job-name paraevo+{{ treatment }}+{{ replicate }}
+#SBATCH --job-name evoparaproto+{{ treatment }}+{{ replicate }}
 #SBATCH --account=devolab
 #SBATCH --output="/mnt/home/%u/joblog/id=%j+stage={{ stage }}+ext.txt"
 #SBATCH --mem=4G
