Bugfix: skip copy nonexistant files on epoch 0

--- a/pipeline/stage=200+what=evolve_parasite_prototype/evolve_parasite_prototype.slurm.sh.jinja
+++ b/pipeline/stage=200+what=evolve_parasite_prototype/evolve_parasite_prototype.slurm.sh.jinja
@@ -119,6 +119,8 @@ while :; do
   echo "LOAD_POPULATION_PATH \${LOAD_POPULATION_PATH}"
   echo "LOAD_POPULATION_PROVLOG_PATH \${LOAD_POPULATION_PROVLOG_PATH}"
 
+if [[ \${EPOCH_COUNTER} -ne 0 ]]; then
+
   # create provlog
   cp "\${LOAD_POPULATION_PROVLOG_PATH}" "provlog.yaml"
   cat << EOF >> "provlog.yaml"
@@ -144,6 +146,12 @@ while :; do
 EOF
 
   cp "\${LOAD_POPULATION_PATH}" host-parasite-smt.spop
+
+else
+
+echo "SKIPPING POPULATION SETUP --- EPOCH 0"
+
+fi
 
   export RANDOM_SEED="\$(cksum <<< "{{ treatment }} {{ replicate }} \${EPOCH_COUNTER}" | cut -f 1 -d ' ')"
   echo "RANDOM_SEED \${RANDOM_SEED}"
