--- a/pipeline/stage=201+what=run_paraevo_treatrepl/run_paraevo_treatrepl.slurm.sh.jinja
+++ b/pipeline/stage=201+what=run_paraevo_treatrepl/run_paraevo_treatrepl.slurm.sh.jinja
@@ -119,6 +119,7 @@ while :; do
   echo "LOAD_POPULATION_PATH \${LOAD_POPULATION_PATH}"
   echo "LOAD_POPULATION_PROVLOG_PATH \${LOAD_POPULATION_PROVLOG_PATH}"
 
+  if [[ \${EPOCH_COUNTER} -ne 0 ]]; then
   # create provlog
   cp "\${LOAD_POPULATION_PROVLOG_PATH}" "provlog.yaml"
   cat << EOF >> "provlog.yaml"
@@ -149,6 +150,12 @@ EOF
   LOAD_GERMLINES_PATH="\${LOAD_POPULATION_DIR}/"*.gpop
   echo "LOAD_GERMLINES_PATH \${LOAD_GERMLINES_PATH}"
   cp "\${LOAD_GERMLINES_PATH}" host-smt.gpop
+
+else
+
+echo "SKIPPING POPULATION AND GERMLINES SETUP --- EPOCH 0"
+
+fi
 
   export RANDOM_SEED="\$(cksum <<< "{{ treatment }} {{ replicate }} \${EPOCH_COUNTER}" | cut -f 1 -d ' ')"
   echo "RANDOM_SEED \${RANDOM_SEED}"
