Fix gpop -> sgerm extension inconsistency

--- a/pipeline/stage=201+what=run_paraevo_treatrepl/run_paraevo_treatrepl.slurm.sh.jinja
+++ b/pipeline/stage=201+what=run_paraevo_treatrepl/run_paraevo_treatrepl.slurm.sh.jinja
@@ -129,7 +129,7 @@ while :; do
   ls "\${LOAD_POPULATION_DIR}"
   LOAD_GERMLINES_PATH="\$(ls "\${LOAD_POPULATION_DIR}/"*.sgerm)"
   echo "LOAD_GERMLINES_PATH \${LOAD_GERMLINES_PATH}"
-  cp "\${LOAD_GERMLINES_PATH}" host-smt.gpop
+  cp "\${LOAD_GERMLINES_PATH}" host-smt.sgerm
 
 else
 
